syntax = "proto3";

option csharp_namespace = "Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetPersonData (PersonDataRequest) returns (PersonDataResponse);
  rpc CalculateFibonacci (FibonacciRequest) returns (stream FibonacciResponse);
  rpc DownloadFile(FileRequest) returns (stream ChunkMsg);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message PersonDataRequest
{
  uint32 id = 1;
}

message PersonDataResponse
{
  string pesel = 1;
  string name = 2;
  string surname = 3;
  uint32 age = 4;
  float height = 5;
}

message FibonacciRequest
{
  uint32 number = 1;
}

message FibonacciResponse
{
  uint32 number = 1;
}

message ChunkMsg {
  string FileName = 1;
  int64 FileSize = 2;
  bytes Chunk = 3;
}

message FileRequest {
  string FilePath = 1;
}
